feat(tema1): agregar respuestas de la sección "Introducción"
Me falta exportar la presentación del Tema 1 a PDF y referenciarlo en la respuesta de la pregunta 4 de la sección Introducción.

--- a/preguntas-tema1/main.tex
+++ b/preguntas-tema1/main.tex
@@ -73,15 +73,27 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 
 \section{Preguntas del PDF}
 \begin{figure}[H]
-  \centering
-  \includegraphics[page=3,width=\textwidth]{./references/intro.pdf}
+	\centering
+	\includegraphics[page=3,width=\textwidth]{./references/intro.pdf}
 \end{figure}
 
 \section{Respuestas}
 \subsection{Introducción}
 \begin{enumerate}
-  \item La simulación (de eventos discretos) se define como relaciones lógicas, matemáticos y probabillsticas que integran el comporta­
-    miento de un sistema bajo estudio cuando se presenta un evento determinado. \cite[p.~150]{garcia2013simpromodel}
+	\item La simulación se refiere a un gran conjunto de métodos y aplicaciones
+	      que buscan imitar el comportamiento de sistemas reales, generalmente por medio de
+	      una computadora con un software apropiado.
+	      Es una herramienta útil en diversas disciplinas ya que, al ser independiente del dominio del problema, es posible
+	      recrear situaciones o resultados tantos físicos como teóricos, teniendo su aplicación en sectores como ser la aeronáutica, procesos industriales, etc.
+	      \cite[p.~2]{garcia2013simpromodel}
+	\item Su propósito es crear una representación simplificada y abstracta de un problema real.
+	\item En un modelo determinista, las relaciones entre los cambios de las variables del modelo son constantes. En cambio, en un modelo estocástico, los cambios en las variables suelen seguir algún modelo probabilístico donde el resultado después de un evento no siempre es el mismo. \cite[p.~3]{garcia2013simpromodel}
+	\item Los tipos más comunes de simulación que existen son:
+	      \begin{itemize}
+		      \item Simulación Continua: Modela sistemas en los que los cambios ocurren continuamente a lo largo del tiempo (ej. modelos de crecimiento poblacional).
+		      \item Simulación de Eventos Discretos: Modela sistemas en los que los cambios ocurren en puntos específicos en el tiempo (ej. sistemas de colas).
+		      \item Simulación Basada en Agentes: Modela sistemas donde múltiples entidades autónomas (agentes) interactúan entre sí (ej. mercados económicos, comportamiento social). % TODO: agregar cita referenciando la diapositiva "TEMA 1" de la Ing. Gladys Machuca.
+	      \end{itemize}
 \end{enumerate}
 \subsection{Terminología Básica}
 \subsection{Conceptos Fundamentales de Simulación}
