fix(references.bib): corregir mala escritura de título de primera referencia

--- a/preguntas-tema1/references/references.bib
+++ b/preguntas-tema1/references/references.bib
@@ -1,6 +1,6 @@
 @book{garcia2013simpromodel,
     author = {García, E. and García, H. and Cárdenas, L.},
-    title = {Simuación de análisis de sistemas con ProModel},
+    title = {Simulación de análisis de sistemas con ProModel},
     publisher = {PEARSON, México},
     edition = {Segunda Edición},
     year = {2013},
