feat(tema1): agregar respuestas de preguntas 2 y 3 de la sección "Conceptos Fundamentales de Simulación"
TODO: agregar respuesta de la pregunta 4

--- a/preguntas-tema1/main.tex
+++ b/preguntas-tema1/main.tex
@@ -215,6 +215,28 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		            ejecutivos para la presentación final.
 
 	      \end{enumerate} \citetitle[p.~12--15]{garcia2013simpromodel}
+        \newpage
+          \item \textbf{Definición de estado:} Condición que guarda el sistema bajo estudio en un
+    momento de tiempo determinado; es como una fotografía de lo que está pasando en el
+    sistema en cierto instante. El estado del sistema se compone de variables o característi­
+    cas de operación puntuales (digamos el número de piezas que hay en el sistema en ese
+    momento), y de variables o características de operación acumuladas, o promedio (como
+    podría ser el tiempo promedio de permanencia de una entidad en el sistema, en una fila,
+    almacén o equipo). \citetitle[p.~4]{garcia2013simpromodel}
+        \item \textbf{Corrida de simulación y la información que proporciona:}
+          La corrida de simulación es la acción de ejecutar la simulación,
+          habiendo establecido previamente una serie de parámetros.
+          Proporciona información estadística como el uso de localizaciones,
+          utilización de recursos, entre otros.
+          \begin{figure}[H]
+            \begin{center}
+              \includegraphics[width=0.95\textwidth]{figures/figure-6.17.png}
+            \end{center}
+            \caption{Figura 6.17: Ejemplo de información proporcionada por la corrida de simulación. }\label{fig:sim_run_example}
+          \end{figure} \citetitle[p.~211--212]{garcia2013simpromodel}
+
+        \item \textbf{La importancia de los números aleatorios en la simulación y cómo se generan:}
+
 \end{enumerate}
 \subsection*{Ventajas y Desventajas del Uso de la Simulación}
 
