feat(tema1): agregar primera versión de respuestas a las preguntas
TODO: agregar la diapositiva "TEMA 1" en references.bib para luego citarlo, revisar ortografía, mejorar redacción de cada una de las respuestas (de tal forma que las primeras palabras hagan referencia a la pregunta), agregar tabla de contenidos (posiblemente donde se reemplazan las primeras palabras de las respuestas por la pregunta misma, a modo de que la tabla de contenidos quede mejor), agregar pie de página, cabecera y números de página.

BREAKING CHANGE:

--- a/preguntas-tema1/main.tex
+++ b/preguntas-tema1/main.tex
@@ -61,7 +61,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Title & Author %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title{Preguntas Tema 1}
+\title{\textbf{Preguntas Tema 1}}
 \author{Antonio Natusch}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -247,7 +247,58 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 
 \end{enumerate}
 \subsection*{Ventajas y Desventajas del Uso de la Simulación}
+\begin{enumerate}
+	\item \textbf{Principales ventajas del uso de la simulación en la toma de decisiones:} Algunas ventajas incluyen:
+	      \begin{enumerate}
+		      \item \underline{\textbf{Apoyo para prueba de conceptos:}} Mediante la simulación,
+		            es posible realizar estudios piloto de diseños de proceso y productos
+		            nuevos, con resultados rápidos y a un bajo costo. \citetitle[p.~2]{garcia2013simpromodel}
+		      \item \underline{\textbf{Bajo riesgo:}} La simulación es
+		            una muy buena herramienta para conocer el impacto en los procesos
+		            sin necesidad de llevarlos a cabo en la realidad. \citetitle[p.~9]{garcia2013simpromodel}
+		      \item \underline{\textbf{Visualización de procesos:}} En la actualidad
+		            los paquetes de software para simulación tienden a ser mas sencillos,
+		            lo que facilita su aplicación; gracias a las herramientas de animación
+		            que forman parte de muchos de esos
+		            paquetes es posible ver cómo se comportará un proceso una vez que sea mejorado. \citetitle[p.~10]{garcia2013simpromodel}
+	      \end{enumerate}
+	      Entre otros.
+	\item \textbf{Limitaciones de la simulación como herramienta de análisis:}
+	      \begin{enumerate}
+		      \item \underline{\textbf{Optimización y costos:}} Aunque muchos paquetes
+		            de software permiten obtener el mejor escenario a
+		            partir de una combinación de variaciones posibles, la simulación \textbf{no
+			            es una herramienta de optimizacion;} además, \textbf{puede ser costosa cuando
+			            se quiere emplearla en problemas relativamente sencillos de resolver},
+		            en lugar de utilizar soluciones analíticas que se
+		            han desarrollado de manera especifica para ese tipo de casos. \citetitle[p.~10]{garcia2013simpromodel}
+		      \item \underline{\textbf{Disponibilidad de tiempo:}} Se requiere bastante tiempo
+		            ---por lo general meses--- para realizar un buen estudio de simulación;
+		            por desgracia, no todos los analistas tienen la disposición
+		            (o la oportunidad) de esperar ese tiempo para obtener una respuesta. \citetitle[p.~10]{garcia2013simpromodel}
+		      \item \underline{\textbf{Conocimientos previos:}} Es preciso que el analista
+		            domine el uso del paquete de simulación y que tenga
+		            sólidos conocimientos de estadística para interpretar los resultados; adicionalmente,
+		            ante una falta del mismo, los resultados de la simulación podrían llegar a ser
+		            idealistas, mucho más de lo que sería posible en la vida real, debido a una mala
+		            parametrización. \citetitle[p.~10]{garcia2013simpromodel}
+	      \end{enumerate}
+	\item \textbf{Situaciones donde es más beneficioso un modelo de simulación sobre un modelo analítico:}
+	      \begin{enumerate}
+		      \item \textbf{Sistemas Complejos:} Cuando el sistema es demasiado complejo para ser descrito adecuadamente mediante análisis analíticos.
+		      \item \textbf{Evaluación Bajo Incertidumbre:} Se requiere evaluar el comportamiento del sistema bajo incertidumbre y variabilidad.
+		      \item \textbf{Experimentación Segura:} Necesario experimentar con diferentes políticas o escenarios sin riesgos para el sistema real.
+		      \item \textbf{Comprensión Visual:} Se busca una comprensión visual e interactiva del comportamiento del sistema.
+	      \end{enumerate}% TODO: agregar cita referenciando la diapositiva "TEMA 1" de la Ing. Gladys Machuca.
+	      \newpage
+	\item \textbf{Identificación y mitigación de riesgos en un proyecto mediante la simulación:} La simulación permite identificar y mitigar riesgos en un proyecto al:
+	      \begin{enumerate}
+		      \item \textbf{Modelar Escenarios de Riesgo:} Crear modelos que representen diferentes escenarios de riesgo.
+		      \item \textbf{Evaluar Impacto:} Analizar cómo los riesgos afectan el desempeño del proyecto.
+		      \item \textbf{Desarrollar Estrategias de Mitigación:} Probar diferentes estrategias para mitigar riesgos y evaluar su efectividad.
+		      \item \textbf{Monitoreo Continuo:} Utilizar la simulación para monitorear el progreso del proyecto y ajustar las estrategias de mitigación según sea necesario.
+	      \end{enumerate}
+\end{enumerate}
 
-\newpage
 \printbibliography[title={Referencias}]
 \end{document}
