feat(references): agregar diapositiva de tema 1, citaciones, limpiar otras citaciones

--- a/preguntas-tema1/main.tex
+++ b/preguntas-tema1/main.tex
@@ -94,8 +94,8 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 	      \begin{itemize}
 		      \item \textbf{Simulación Continua}: Modela sistemas en los que los cambios ocurren continuamente a lo largo del tiempo (ej. modelos de crecimiento poblacional).
 		      \item \textbf{Simulación de Eventos Discretos}: Modela sistemas en los que los cambios ocurren en puntos específicos en el tiempo (ej. sistemas de colas).
-		      \item \small{\textbf{Simulación Basada en Agentes}: Modela sistemas donde múltiples entidades autónomas (agentes) interactúan entre sí (ej. mercados económicos, comportamiento social).} % TODO: agregar cita referenciando la diapositiva "TEMA 1" de la Ing. Gladys Machuca.
-	      \end{itemize}
+		      \item \small{\textbf{Simulación Basada en Agentes}: Modela sistemas donde múltiples entidades autónomas (agentes) interactúan entre sí (ej. mercados económicos, comportamiento social).}
+	      \end{itemize}\citetitle[p.~2]{machuca2025modysimtema1}
 \end{enumerate}
 \subsection*{Terminología Básica}
 \begin{enumerate}
@@ -117,7 +117,7 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		      \item \textbf{Verificación:} Proceso en el cual, una vez identificado las distribuciones de probabilidad de las variables del modelo y se han implantado los supuestos acordados, se comprueba la propiedad de la programación del modelo, asegurándonos que todos los parámetros en la simulación funcionen correctamente. \citetitle[p.~13]{garcia2013simpromodel}
 		      \item \textbf{Validación:} Proceso que consiste en pruebas simultáneas con información de entrada real para observar su comportamiento y analizar sus resultados. \citetitle[p.~14]{garcia2013simpromodel}
 	      \end{itemize}
-	\item Se define como el \textit{periodo que se modela}, que puede ser diferente del tiempo real. % Extraido de la diapositiva TEMA 1 de la Ing. Gladys.
+	\item Se define como el \textit{periodo que se modela}, que puede ser diferente del tiempo real. \citetitle[p.~4]{machuca2025modysimtema1}
 \end{enumerate}
 \subsection*{Conceptos Fundamentales de Simulación}
 \begin{enumerate}[label*=\arabic*.]
@@ -271,25 +271,25 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 			            es una herramienta de optimizacion;} además, \textbf{puede ser costosa cuando
 			            se quiere emplearla en problemas relativamente sencillos de resolver},
 		            en lugar de utilizar soluciones analíticas que se
-		            han desarrollado de manera especifica para ese tipo de casos. \citetitle[p.~10]{garcia2013simpromodel}
+		            han desarrollado de manera especifica para ese tipo de casos.
 		      \item \underline{\textbf{Disponibilidad de tiempo:}} Se requiere bastante tiempo
 		            ---por lo general meses--- para realizar un buen estudio de simulación;
 		            por desgracia, no todos los analistas tienen la disposición
-		            (o la oportunidad) de esperar ese tiempo para obtener una respuesta. \citetitle[p.~10]{garcia2013simpromodel}
+		            (o la oportunidad) de esperar ese tiempo para obtener una respuesta.
 		      \item \underline{\textbf{Conocimientos previos:}} Es preciso que el analista
 		            domine el uso del paquete de simulación y que tenga
 		            sólidos conocimientos de estadística para interpretar los resultados; adicionalmente,
 		            ante una falta del mismo, los resultados de la simulación podrían llegar a ser
 		            idealistas, mucho más de lo que sería posible en la vida real, debido a una mala
-		            parametrización. \citetitle[p.~10]{garcia2013simpromodel}
-	      \end{enumerate}
+		            parametrización.
+	      \end{enumerate} \citetitle[p.~10]{garcia2013simpromodel}
 	\item \textbf{Situaciones donde es más beneficioso un modelo de simulación sobre un modelo analítico:}
 	      \begin{enumerate}
 		      \item \textbf{Sistemas Complejos:} Cuando el sistema es demasiado complejo para ser descrito adecuadamente mediante análisis analíticos.
 		      \item \textbf{Evaluación Bajo Incertidumbre:} Se requiere evaluar el comportamiento del sistema bajo incertidumbre y variabilidad.
 		      \item \textbf{Experimentación Segura:} Necesario experimentar con diferentes políticas o escenarios sin riesgos para el sistema real.
 		      \item \textbf{Comprensión Visual:} Se busca una comprensión visual e interactiva del comportamiento del sistema.
-	      \end{enumerate}% TODO: agregar cita referenciando la diapositiva "TEMA 1" de la Ing. Gladys Machuca.
+	      \end{enumerate} \citetitle[p.~7]{machuca2025modysimtema1}
 	      \newpage
 	\item \textbf{Identificación y mitigación de riesgos en un proyecto mediante la simulación:} La simulación permite identificar y mitigar riesgos en un proyecto al:
 	      \begin{enumerate}
