fix(tema1): agregar tildes faltantes y remover guiones innecesarios

--- a/preguntas-tema1/main.tex
+++ b/preguntas-tema1/main.tex
@@ -86,7 +86,7 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 	      que buscan imitar el comportamiento de sistemas reales, generalmente por medio de
 	      una computadora con un software apropiado.
 	      Es una herramienta útil en diversas disciplinas ya que, al ser independiente del dominio del problema, es posible
-	      recrear situaciones o resultados tantos físicos como teóricos, teniendo su aplicación en sectores como ser la aeronáutica, procesos industriales, etc.
+	      recrear situaciones o resultados tanto físicos como teóricos, teniendo su aplicación en sectores como ser la aeronáutica, procesos industriales, etc.
 	      \citetitle[p.~2]{garcia2013simpromodel}
 	\item Su propósito es crear una representación simplificada y abstracta de un problema real.
 	\item En un modelo determinista, las relaciones entre los cambios de las variables del modelo son constantes. En cambio, en un modelo estocástico, los cambios en las variables suelen seguir algún modelo probabilístico donde el resultado después de un evento no siempre es el mismo. \citetitle[p.~3]{garcia2013simpromodel}
@@ -109,12 +109,12 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		      \item \textbf{Evento:} Es un \textit{cambio en el estado actual del sistema.} Existen dos tipos principales de eventos: \begin{itemize}
 			            \item \textbf{Eventos actuales:} Aquellos que están sucediendo en el sistema en un momento dado.
 			            \item \textbf{Eventos futuros:} Cambios que
-			                  se presentaran en el sistema después del tiempo de simulación, de acuerdo con una pro­
+			                  se presentarán en el sistema después del tiempo de simulación, de acuerdo con una pro­
 			                  gramación específica.
 		            \end{itemize} \citetitle[p.~4]{garcia2013simpromodel}
 	      \end{itemize}
 	\item \begin{itemize}
-		      \item \textbf{Verificación:} Proceso en el cual, una vez identificado las distribuciones de probabilidad de las variables del modelo y se han implantado los supuestos acordados, se comprueba la propiedad de la programación del modelo, asegurándonos que todos los parámetros en la simulación funcionen correctamente. \citetitle[p.~13]{garcia2013simpromodel}
+		      \item \textbf{Verificación:} Proceso en el cual, una vez identificadas las distribuciones de probabilidad de las variables del modelo y se han implantado los supuestos acordados, se comprueba la propiedad de la programación del modelo, asegurándonos de que todos los parámetros en la simulación funcionen correctamente. \citetitle[p.~13]{garcia2013simpromodel}
 		      \item \textbf{Validación:} Proceso que consiste en pruebas simultáneas con información de entrada real para observar su comportamiento y analizar sus resultados. \citetitle[p.~14]{garcia2013simpromodel}
 	      \end{itemize}
 	\item Se define como el \textit{periodo que se modela}, que puede ser diferente del tiempo real. \citetitle[p.~4]{machuca2025modysimtema1}
@@ -132,7 +132,7 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		            sistema en términos de un modelo conceptual, la siguiente etapa del estudio
 		            consiste en la generación de un modelo de simulación base.
 		            \\No es preciso que este modelo sea demasiado detallado, pues se requiere mucha más información
-		            estadística sobre el comportamiento de las variables de decision del sistema.
+		            estadística sobre el comportamiento de las variables de decisión del sistema.
 		            La generación de este modelo es el primer reto para el programador de la simulación,
 		            ya que debe traducir a un lenguaje de simulación la información que se
 		            obtuvo en la etapa de definición del sistema, e incluir las interrelaciones de
@@ -165,7 +165,7 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		            parámetros usados en la simulación funcionen correctamente.
 
 		            Una vez que se ha completado la verificación, el modelo está listo para su
-		            comparación con la realidad del problema que se esta modelando. A esta etapa
+		            comparación con la realidad del problema que se está modelando. A esta etapa
 		            se le conoce también como \textit{\textbf{validación del modelo.}}
 
 		      \item \textbf{Validación del modelo:} El proceso de validación del modelo consiste en realizar
@@ -174,8 +174,8 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		            \\Si el problema bajo simulación involucra un proceso que se desea mejorar,
 		            el modelo debe someterse a prueba con las condiciones actuales de operación,
 		            lo que nos dará como resultado un comportamiento similar al que se presenta
-		            realmente en nuestro proceso. \\Por otro lado, si se esta diseñando un nuevo proceso
-		            la validación resulta mas complicada. Una manera de validar el modelo en
+		            realmente en nuestro proceso. \\Por otro lado, si se está diseñando un nuevo proceso
+		            la validación resulta más complicada. Una manera de validar el modelo en
 		            este caso, consiste en introducir algunos escenarios sugeridos por el cliente y
 		            validar que el comportamiento sea congruente con las expectativas que se tienen
 		            de acuerdo con la experiencia.
@@ -183,12 +183,12 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		      \item \textbf{Generación del modelo final:} Una vez que el modelo se ha validado, el analista
 		            esta listo para realizar la simulación y estudiar el comportamiento del proceso.
 		            En caso de que se desee comparar escenarios diferentes para un mismo problema,
-		            este sera el modelo \textit{raíz}; en tal situación, el siguiente paso es la \textit{\textbf{definición de los escenarios a analizar.}}
+		            este será el modelo \textit{raíz}; en tal situación, el siguiente paso es la \textit{\textbf{definición de los escenarios a analizar.}}
 
 		      \item \textbf{Determinación de los escenarios para el análisis:} Tras validar el modelo es
 		            necesario acordar con el cliente los escenarios que se quieren analizar. Una
 		            manera muy sencilla de determinarlos consiste en utilizar un escenario pesimista,
-		            uno optimista y uno intermedio para la variable de respuesta mas importante.
+		            uno optimista y uno intermedio para la variable de respuesta más importante.
 
 		      \item \textbf{Análisis de sensibilidad:} Una vez que se obtienen los resultados de los escenarios
 		            es importante realizar pruebas estadísticas que permitan comparar los escenarios
@@ -197,7 +197,7 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		            Si no hay intersección de intervalos podremos decir con
 		            certeza estadística que los resultados no son iguales; sin embargo, si los intervalos
 		            se sobreponen será imposible definir estadísticamente que una solución es mejor
-		            que otra. Si se desea obtener un escenario "ganador”, será necesario realizar más
+		            que otra. Si se desea obtener un escenario "ganador” será necesario realizar más
 		            réplicas de cada modelo o incrementar el tiempo de simulación de cada corrida.
 		            Con ello se busca acortar los intervalos de confianza de las soluciones finales y,
 		            por consiguiente, incrementar la probabilidad de diferenciar las soluciones.
@@ -207,10 +207,10 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		            Esta documentación es muy importante, pues permitirá el uso del modelo
 		            generado en caso de que se requieran ajustes futuros. En ella se deben incluir los
 		            supuestos del modelo, las distribuciones asociadas a sus variables, todos sus
-		            alcances y limitaciones y, en general, la totalidad de las consideraciones de programación.
+		            alcances y limitaciones y, en general, la totalidad de las consideraciones de .
 		            También es importante incluir sugerencias tanto respecto del uso del
 		            modelo como sobre los resultados obtenidos, con el propósito de realizar un
-		            reporte mas completo. Por último, deberán presentarse las conclusiones del
+		            reporte más completo. Por último, deberán presentarse las conclusiones del
 		            proyecto de simulación, a partir de las cuales es posible obtener los reportes
 		            ejecutivos para la presentación final.
 
@@ -218,8 +218,8 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 	      \newpage
 	\item \textbf{Definición de estado:} Condición que guarda el sistema bajo estudio en un
 	      momento de tiempo determinado; es como una fotografía de lo que está pasando en el
-	      sistema en cierto instante. El estado del sistema se compone de variables o característi­
-	      cas de operación puntuales (digamos el número de piezas que hay en el sistema en ese
+	      sistema en cierto instante. El estado del sistema se compone de variables o características
+	      de operación puntuales (digamos el número de piezas que hay en el sistema en ese
 	      momento), y de variables o características de operación acumuladas, o promedio (como
 	      podría ser el tiempo promedio de permanencia de una entidad en el sistema, en una fila,
 	      almacén o equipo). \citetitle[p.~4]{garcia2013simpromodel}
@@ -268,10 +268,10 @@ La misma presentación se encuentra en \href[page=1]{../references/intro.pdf}{el
 		      \item \underline{\textbf{Optimización y costos:}} Aunque muchos paquetes
 		            de software permiten obtener el mejor escenario a
 		            partir de una combinación de variaciones posibles, la simulación \textbf{no
-			            es una herramienta de optimizacion;} además, \textbf{puede ser costosa cuando
+			            es una herramienta de optimización;} además, \textbf{puede ser costosa cuando
 			            se quiere emplearla en problemas relativamente sencillos de resolver},
 		            en lugar de utilizar soluciones analíticas que se
-		            han desarrollado de manera especifica para ese tipo de casos.
+		            han desarrollado de manera específica para ese tipo de casos.
 		      \item \underline{\textbf{Disponibilidad de tiempo:}} Se requiere bastante tiempo
 		            ---por lo general meses--- para realizar un buen estudio de simulación;
 		            por desgracia, no todos los analistas tienen la disposición
